--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,7 +43,7 @@ development_status:
   # Epic 1: Project Foundation & Core Infrastructure
   # ============================================================
   epic-1: in-progress
-  1-1-initialize-vscode-extension-project-with-yeoman-generator: in-progress
+  1-1-initialize-vscode-extension-project-with-yeoman-generator: review
   1-2-configure-dual-build-system-and-create-webview-scaffold: backlog
   1-3-implement-configuration-manager-with-vscode-settings-integration: backlog
   1-4-implement-secure-api-key-storage-with-vscode-secretstorage: backlog
