--- a/package.json
+++ b/package.json
@@ -1,26 +1,49 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack --mode=development --watch",
-    "start": "node ./serve.js"
+  "name": "ai-101-ts",
+  "displayName": "ai-101-ts",
+  "description": "VSCode AI agents with transparent HUD",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.108.0"
   },
-  "dependencies": {
-    "@types/classnames": "^2.3.1",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "todomvc-app-css": "^2.4.3",
-    "todomvc-common": "^1.0.5"
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [],
+  "main": "./dist/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "ai-101-ts.helloWorld",
+        "title": "Hello World"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run package",
+    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:esbuild": "node esbuild.js --watch",
+    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+    "package": "npm run check-types && npm run lint && node esbuild.js --production",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "check-types": "tsc --noEmit",
+    "lint": "eslint src",
+    "test": "vscode-test"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.6.3",
-    "node-static": "^0.7.11",
-    "ts-loader": "^9.5.2",
-    "typescript": "^5.3.3",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1"
+    "@types/vscode": "^1.108.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "20.x",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "eslint": "^9.25.1",
+    "esbuild": "^0.25.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.8.3",
+    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.5.2"
   }
 }
