--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,7 +47,7 @@ development_status:
   1-2-configure-dual-build-system-and-create-webview-scaffold: review
   1-3-implement-configuration-manager-with-vscode-settings-integration: review
   1-4-implement-secure-api-key-storage-with-vscode-secretstorage: review
-  1-5-create-configuration-preset-system-for-solo-team-enterprise: backlog
+  1-5-create-configuration-preset-system-for-solo-team-enterprise: review
   1-6-implement-export-import-configuration-functionality: backlog
   1-7-implement-centralized-error-handler-with-retry-logic: backlog
   1-8-set-up-testing-framework-with-mocha-and-vscode-test-electron: backlog
