--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -48,8 +48,8 @@ development_status:
   1-3-implement-configuration-manager-with-vscode-settings-integration: review
   1-4-implement-secure-api-key-storage-with-vscode-secretstorage: review
   1-5-create-configuration-preset-system-for-solo-team-enterprise: review
-  1-6-implement-export-import-configuration-functionality: backlog
-  1-7-implement-centralized-error-handler-with-retry-logic: backlog
+  1-6-implement-export-import-configuration-functionality: review
+  1-7-implement-centralized-error-handler-with-retry-logic: ready-for-dev
   1-8-set-up-testing-framework-with-mocha-and-vscode-test-electron: backlog
   epic-1-retrospective: optional
 
