--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -49,7 +49,7 @@ development_status:
   1-4-implement-secure-api-key-storage-with-vscode-secretstorage: review
   1-5-create-configuration-preset-system-for-solo-team-enterprise: review
   1-6-implement-export-import-configuration-functionality: review
-  1-7-implement-centralized-error-handler-with-retry-logic: ready-for-dev
+  1-7-implement-centralized-error-handler-with-retry-logic: review
   1-8-set-up-testing-framework-with-mocha-and-vscode-test-electron: backlog
   epic-1-retrospective: optional
 
