--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -56,8 +56,8 @@ development_status:
   # ============================================================
   # Epic 2: LLM Provider Integration & Caching
   # ============================================================
-  epic-2: backlog
-  2-1-define-illmprovider-interface-with-adapter-pattern: backlog
+  epic-2: in-progress
+  2-1-define-illmprovider-interface-with-adapter-pattern: review
   2-2-implement-openai-provider-with-error-handling: backlog
   2-3-implement-anthropic-claude-provider-with-error-handling: backlog
   2-4-implement-llm-provider-manager-with-registry-and-fallbacks: backlog
