--- a/package.json
+++ b/package.json
@@ -96,6 +96,10 @@
     "lint": "eslint src",
     "test": "vscode-test"
   },
+  "dependencies": {
+    "openai": "^4.28.0",
+    "js-tiktoken": "^1.0.10"
+  },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
