--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -63,7 +63,7 @@ development_status:
   2-4-implement-llm-provider-manager-with-registry-and-fallbacks: review
   2-5-implement-hybrid-llm-cache-l1-memory-l2-file-system: review
   2-6-integrate-cache-with-provider-manager: review
-  2-7-implement-rate-limiting-and-budget-enforcement: in-progress
+  2-7-implement-rate-limiting-and-budget-enforcement: review
   2-8-implement-real-time-cost-tracking-and-display: backlog
   epic-2-retrospective: optional
 
