--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -71,7 +71,7 @@ development_status:
   # Epic 3: AI Agent System & Orchestration
   # ============================================================
   epic-3: backlog
-  3-1-define-iagent-interface-for-shared-agent-behaviors: backlog
+  3-1-define-iagent-interface-for-shared-agent-behaviors: review
   3-2-implement-agent-orchestrator-with-central-coordination-pattern: backlog
   3-3-implement-context-agent-for-file-loading-and-token-optimization: backlog
   3-4-implement-architect-agent-for-project-analysis: backlog
