--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -73,7 +73,7 @@ development_status:
   epic-3: backlog
   3-1-define-iagent-interface-for-shared-agent-behaviors: review
   3-2-implement-agent-orchestrator-with-central-coordination-pattern: review
-  3-3-implement-context-agent-for-file-loading-and-token-optimization: backlog
+  3-3-implement-context-agent-for-file-loading-and-token-optimization: review
   3-4-implement-architect-agent-for-project-analysis: backlog
   3-5-implement-coder-agent-for-code-generation: backlog
   3-6-implement-reviewer-agent-for-proactive-risk-identification: backlog
