--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -78,7 +78,7 @@ development_status:
   3-5-implement-coder-agent-for-code-generation: review
   3-6-implement-reviewer-agent-for-proactive-risk-identification: review
   3-7-implement-backend-state-manager-extensionstatemanager: review
-  3-8-implement-postmessage-state-synchronization-to-webview: backlog
+  3-8-implement-postmessage-state-synchronization-to-webview: review
   3-9-verify-multi-agent-state-synchronization: backlog
   3-10-implement-agent-lifecycle-events-for-extensibility: backlog
   epic-3-retrospective: optional
