--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -87,7 +87,7 @@ development_status:
   # Epic 4: Transparent HUD & Visual System
   # ============================================================
   epic-4: backlog
-  4-1-enhance-webview-with-transparency-and-hud-positioning: backlog
+  4-1-enhance-webview-with-transparency-and-hud-positioning: review
   4-2-implement-sumi-e-aesthetic-visual-language: backlog
   4-3-implement-vital-signs-bar-with-real-time-metrics: backlog
   4-4-implement-spatial-anti-collision-algorithm: backlog
