--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -90,7 +90,7 @@ development_status:
   4-1-enhance-webview-with-transparency-and-hud-positioning: review
   4-2-implement-sumi-e-aesthetic-visual-language: review
   4-3-implement-vital-signs-bar-with-real-time-metrics: review
-  4-4-implement-spatial-anti-collision-algorithm: backlog
+  4-4-implement-spatial-anti-collision-algorithm: review
   4-5-implement-adaptive-agent-positioning-system: backlog
   4-6-implement-4-level-alert-system-with-code-anchoring: backlog
   4-7-implement-gpu-accelerated-animations-for-60fps-performance: backlog
