--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -93,8 +93,8 @@ development_status:
   4-4-implement-spatial-anti-collision-algorithm: review
   4-5-implement-adaptive-agent-positioning-system: review
   4-6-implement-4-level-alert-system-with-code-anchoring: review
-  4-7-implement-gpu-accelerated-animations-for-60fps-performance: in-progress
-  4-8-implement-async-rendering-pipeline-with-non-blocking-updates: backlog
+  4-7-implement-gpu-accelerated-animations-for-60fps-performance: review
+  4-8-implement-async-rendering-pipeline-with-non-blocking-updates: review
   epic-4-retrospective: optional
 
   # ============================================================
