--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -100,8 +100,8 @@ development_status:
   # ============================================================
   # Epic 5: User Modes & Customization
   # ============================================================
-  epic-5: backlog
-  5-1-implement-mode-system-infrastructure: backlog
+  epic-5: in-progress
+  5-1-implement-mode-system-infrastructure: review
   5-2-implement-learning-mode-with-pedagogical-explanations: backlog
   5-3-implement-expert-mode-with-in-depth-technical-details: backlog
   5-4-implement-focus-dnd-mode-with-hidden-agents: backlog
@@ -109,8 +109,8 @@ development_status:
   5-6-implement-performance-mode-for-low-end-machines: backlog
   5-7-implement-high-contrast-mode-for-accessibility: backlog
   5-8-implement-colorblind-accessibility-alternatives: backlog
-  5-9-implement-complete-keyboard-only-navigation: backlog
-  5-10-implement-appearance-customization-settings: backlog
+  5-9-implement-keyboard-only-navigation-for-hud: backlog
+  5-10-verify-accessibility-compliance-with-reference-tools: backlog
   epic-5-retrospective: optional
 
   # ============================================================
