--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -108,8 +108,8 @@ development_status:
   5-5-implement-team-mode-with-visible-labels-and-metrics: review
   5-6-implement-performance-mode-for-low-end-machines: review
   5-7-implement-high-contrast-mode-for-accessibility: review
-  5-8-implement-colorblind-accessibility-alternatives: done
-  5-9-implement-keyboard-only-navigation-for-hud: backlog
+  5-8-implement-colorblind-accessibility-alternatives: review
+  5-9-implement-keyboard-only-navigation-for-hud: review
   5-10-verify-accessibility-compliance-with-reference-tools: backlog
   epic-5-retrospective: optional
 
