--- a/package.json
+++ b/package.json
@@ -72,6 +72,11 @@
         "command": "ai-101-ts.removeContextFile",
         "title": "Remove File from Context",
         "category": "AI 101"
+      },
+      {
+        "command": "ai-101-ts.viewArchitecture",
+        "title": "View Detected Architecture",
+        "category": "AI 101"
       }
     ],
     "keybindings": [
@@ -236,6 +241,11 @@
             }
           },
           "description": "Keyboard navigation shortcuts for HUD accessibility"
+        },
+        "ai101.architecture.overrides": {
+          "type": "object",
+          "default": {},
+          "description": "Override detected project architecture patterns (e.g., techStack, patterns, conventions)."
         }
       }
     }
