--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -124,7 +124,7 @@ development_status:
   6-5-implement-architecture-aligned-suggestion-generation: review
   6-6-implement-proactive-edge-case-identification: review
   6-7-implement-real-time-security-validation: review
-  6-8-implement-decision-and-reasoning-history-timeline: backlog
+  6-8-implement-decision-and-reasoning-history-timeline: review
   6-9-implement-development-phase-detection: backlog
   epic-6-retrospective: optional
 
