--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -136,7 +136,7 @@ development_status:
   7-2-implement-global-hotkey-configuration-system: review
   7-3-implement-drag-and-drop-alerts-to-todo-list: done
   7-4-implement-contextual-hover-tooltips-on-agents: review
-  7-5-implement-click-to-expand-for-alert-details-and-fixes: backlog
+  7-5-implement-click-to-expand-for-alert-details-and-fixes: review
   7-6-implement-vscode-command-palette-integration: backlog
   7-7-implement-keyboard-only-navigation-for-all-interactive-elements: backlog
   7-8-implement-force-agent-state-commands-for-development-and-debug: backlog
