--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -138,7 +138,7 @@ development_status:
   7-4-implement-contextual-hover-tooltips-on-agents: review
   7-5-implement-click-to-expand-for-alert-details-and-fixes: review
   7-6-implement-vscode-command-palette-integration: review
-  7-7-implement-keyboard-only-navigation-for-all-interactive-elements: backlog
+  7-7-implement-keyboard-only-navigation-for-all-interactive-elements: review
   7-8-implement-force-agent-state-commands-for-development-and-debug: backlog
   epic-7-retrospective: optional
 
