--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -139,7 +139,7 @@ development_status:
   7-5-implement-click-to-expand-for-alert-details-and-fixes: review
   7-6-implement-vscode-command-palette-integration: review
   7-7-implement-keyboard-only-navigation-for-all-interactive-elements: review
-  7-8-implement-force-agent-state-commands-for-development-and-debug: backlog
+  7-8-implement-force-agent-state-commands-for-development-and-debug: review
   epic-7-retrospective: optional
 
   # ============================================================
