--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -145,8 +145,8 @@ development_status:
   # ============================================================
   # Epic 8: Analytics, Telemetry & Metrics
   # ============================================================
-  epic-8: backlog
-  8-1-implement-opt-in-telemetry-system-with-privacy-controls: backlog
+  epic-8: in-progress
+  8-1-implement-opt-in-telemetry-system-with-privacy-controls: review
   8-2-implement-usage-metrics-collection-and-display: backlog
   8-3-implement-suggestion-acceptance-rate-tracking: backlog
   8-4-implement-post-session-comprehension-surveys: backlog
