--- a/package.json
+++ b/package.json
@@ -354,7 +354,9 @@
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "test:unit": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
