--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -149,7 +149,7 @@ development_status:
   8-1-implement-opt-in-telemetry-system-with-privacy-controls: review
   8-2-implement-usage-metrics-collection-and-display: review
   8-3-implement-suggestion-acceptance-rate-tracking: review
-  8-4-implement-post-session-comprehension-surveys: backlog
+  8-4-implement-post-session-comprehension-surveys: review
   8-5-implement-weekly-learning-progress-surveys: backlog
   8-6-implement-nps-net-promoter-score-collection: backlog
   8-7-implement-too-distracting-detection-and-mitigation: backlog
