--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -152,7 +152,7 @@ development_status:
   8-4-implement-post-session-comprehension-surveys: review
   8-5-implement-weekly-learning-progress-surveys: review
   8-6-implement-nps-net-promoter-score-collection: review
-  8-7-implement-too-distracting-detection-and-mitigation: backlog
+  8-7-implement-too-distracting-detection-and-mitigation: review
   8-8-implement-team-adoption-and-comprehension-tracking-for-tech-leads: backlog
   epic-8-retrospective: optional
 
