--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -153,7 +153,7 @@ development_status:
   8-5-implement-weekly-learning-progress-surveys: review
   8-6-implement-nps-net-promoter-score-collection: review
   8-7-implement-too-distracting-detection-and-mitigation: review
-  8-8-implement-team-adoption-and-comprehension-tracking-for-tech-leads: backlog
+  8-8-implement-team-adoption-and-comprehension-tracking-for-tech-leads: review
   epic-8-retrospective: optional
 
   # ============================================================
