--- a/package.json
+++ b/package.json
@@ -356,7 +356,8 @@
     "lint": "eslint src",
     "test": "vscode-test",
     "test:unit": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "docs:generate": "typedoc"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
@@ -378,6 +379,7 @@
     "eslint": "^9.25.1",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
+    "typedoc": "^0.28.16",
     "typescript": "^5.8.3",
     "vitest": "^4.0.17"
   }
