--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -163,7 +163,7 @@ development_status:
   9-1-define-and-document-illmprovider-extension-interface: review
   9-2-implement-llm-provider-registration-api: review
   9-3-define-and-document-iagentrenderer-extension-interface: review
-  9-4-implement-lifecycle-event-subscription-api: backlog
+  9-4-implement-lifecycle-event-subscription-api: review
   9-5-implement-typed-configuration-api-for-programmatic-access: backlog
   9-6-implement-semantic-versioning-for-api-compatibility: backlog
   epic-9-retrospective: optional
